; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar9001/extr_ar9160_attach.c_ar9160AniSetup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar9001/extr_ar9160_attach.c_ar9160AniSetup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar5212AniParams = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.ath_hal = type { i32 }
%struct.TYPE_2__ = type { i32 }

@ar9160AniSetup.aniparams = internal constant %struct.ar5212AniParams { i32 4, i32 7, i32 2, i32 500, i32 200, i32 200, i32 100, i32 40, i32 7, i32 100, i32 0, i32 2, i32 -78, i32 -64, i32 -14, i32 -55 }, align 4
@HAL_ANI_NOISE_IMMUNITY_LEVEL = common dso_local global i32 0, align 4
@AH_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath_hal*)* @ar9160AniSetup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar9160AniSetup(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %3 = load i32, i32* @HAL_ANI_NOISE_IMMUNITY_LEVEL, align 4
  %4 = shl i32 1, %3
  %5 = xor i32 %4, -1
  %6 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %7 = call %struct.TYPE_2__* @AH5416(%struct.ath_hal* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %9, %5
  store i32 %10, i32* %8, align 4
  %11 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %12 = load i32, i32* @AH_TRUE, align 4
  %13 = call i32 @ar5416AniAttach(%struct.ath_hal* %11, %struct.ar5212AniParams* @ar9160AniSetup.aniparams, %struct.ar5212AniParams* @ar9160AniSetup.aniparams, i32 %12)
  ret void
}

declare dso_local %struct.TYPE_2__* @AH5416(%struct.ath_hal*) #1

declare dso_local i32 @ar5416AniAttach(%struct.ath_hal*, %struct.ar5212AniParams*, %struct.ar5212AniParams*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
